--- a/online_shop_app/templates/home.html
+++ b/online_shop_app/templates/home.html
@@ -1,10 +1,181 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bosfor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+<div class="flex-column align-items-center border-bottom box-shadow">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="https://sun9-56.userapi.com/impg/L-7l42bYhWWKUZ0xKIQ-ENOTSTx4hTsHnjdk6w/mKk64TOYyF4.jpg?size=1048x297&quality=95&sign=47dd03140665fe8802e0d4f9a8b23b2e&type=album"
+                     alt="Bootstrap" width="210" height="60">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="/catalog/" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            Каталог
+                        </a>
+                        <ul class="dropdown-menu">
+                            <div class="container text-center">
+                                <div class="row">
+                                    <div class="col">
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li>
+                                            <p>Площадь сооружения</p>
+                                        </li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">до 100 м²</a></li>
+                                        <li><a class="dropdown-item" href="#">до 150 м²</a></li>
+                                        <li><a class="dropdown-item" href="#">до 200 м²</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                    </div>
+                                    <div class="col">
+                                        <li>
+                                            <p>Материал</p>
+                                        </li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">Каркасные</a></li>
+                                        <li><a class="dropdown-item" href="#">Монолитно-каркасные</a></li>
+                                        <li><a class="dropdown-item" href="#">Блоки</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                    </div>
+                                    <div class="col">
+                                        <li>
+                                            <p>Этажность</p>
+                                        </li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">1 этаж</a></li>
+                                        <li><a class="dropdown-item" href="#">2 этажа</a></li>
+                                        <li><a class="dropdown-item" href="#">от 2 этажей</a></li>
+                                        <li><a class="dropdown-item" href="#">+ мансарда</a></li>
+                                    </div>
+                                </div>
+                            </div>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contacts/">Контакты</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Поиск..." aria-label="Поиск...">
+                    <button class="btn btn-outline-light" type="submit">Поиск</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+</div>
 
+<div class="container mt-3 mb-3">
+    <div class="row">
+        <div class="col-5">
+            <h1 class="title mt-5 mb-5 pricing-title">Готовые проекты домов</h1>
+            <ul class="list-unstyled mb-5">
+                <p class="h3">
+                    Босфор предлагает проекты домов и загородных коттеджей.
+                    В каталоге Вы найдете варианты из блоков и дерева
+                    площадью от 80 до 250 м2 с подробным описанием дома,
+                    планами этажей и фото
+                </p>
+            </ul>
+            <div class="d-grid gap-2 col-12 mx-auto">
+                <button type="button" class="btn btn-lg btn-block btn-dark">Подобрать проект</button>
+            </div>
+        </div>
+        <div class="col-7">
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://sun9-26.userapi.com/impg/bYOF8-8y2sX7Wj4LCGygt4enowdlGsGRrh9SoA/kRLXMiWTMLQ.jpg?size=2560x1706&quality=95&sign=cdd7cec82320b17d0fa577b2c9b03648&type=album"
+                             class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://sun13-2.userapi.com/impg/udstWw5l3q4grzc-ZUiJwGRKcGvYAmdbUuvY_g/0hSeQ90mrXw.jpg?size=2560x1706&quality=95&sign=47c338a426d8a3c6b607e70f8041daaa&type=album"
+                             class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://sun9-55.userapi.com/impg/OPqmd-D-Up8FGU3AoNErDXQQMg63iQvzhN8fgg/4UFn4b5ys1M.jpg?size=2560x1706&quality=95&sign=a253e6ceea31c06b170929bd3f64db4e&type=album"
+                             class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+
+        <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
+            <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
+                <div class="row">
+                    <div class="col-lg-3 mb-3">
+                        <a class="navbar-brand" href="/">
+                            <img src="https://sun9-56.userapi.com/impg/L-7l42bYhWWKUZ0xKIQ-ENOTSTx4hTsHnjdk6w/mKk64TOYyF4.jpg?size=1048x297&quality=95&sign=47dd03140665fe8802e0d4f9a8b23b2e&type=album"
+                                 alt="Bootstrap" width="210" height="60">
+                        </a>
+                        <ul class="list-unstyled small mt-3">
+                            <li class="mb-2">
+                                Челябинск
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-lg-2 offset-lg-1 mb-3">
+                        <h5>Ссылки</h5>
+                        <ul class="list-unstyled">
+                            <li class="mb-2"><a href="/">Главная</a></li>
+                            <li class="mb-2"><a href="/catalog/">Каталог</a></li>
+                            <li class="mb-2"><a href="/">Заказать проект</a></li>
+                            <li class="mb-2"><a href="/">О нас</a></li>
+                            <li class="mb-2"><a href="/">Акции</a></li>
+                            <li class="mb-2"><a href="/contacts/">Контакты</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
 </body>
 </html>
