--- a/online_shop_app/templates/home1.html
+++ b/online_shop_app/templates/home1.html
@@ -78,6 +78,9 @@
                         </ul>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/contacts/">Услуги</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/contacts/">Контакты</a>
                     </li>
                 </ul>
