--- a/online_shop_app/templates/home.html
+++ b/online_shop_app/templates/home.html
@@ -176,37 +176,7 @@
 
 
 <header data-bs-theme="dark">
-    <div class="collapse text-bg-dark" id="navbarHeader">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-7 py-4">
-                    <h4>О нас</h4>
-                    <p class="text-body-secondary">Мы компания, которая помогает вам в реализации ваших идей, а так же
-                        поможем подобрать вам готовые проекты домов</p>
-                </div>
-                <div class="col-sm-4 offset-md-1 py-4">
-                    <h4>Меню</h4>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                        <li><a href="#" class="text-white">Like on Facebook</a></li>
-                        <li><a href="#" class="text-white">Email me</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-        <div class="container">
-            <a class="navbar-brand" href="/">
-                <img src="https://sun9-56.userapi.com/impg/L-7l42bYhWWKUZ0xKIQ-ENOTSTx4hTsHnjdk6w/mKk64TOYyF4.jpg?size=1048x297&quality=95&sign=47dd03140665fe8802e0d4f9a8b23b2e&type=album"
-                     alt="Bootstrap" width="210" height="60">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
-                    aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-    </div>
+{% include 'includes/inc_menu.html' %}
 </header>
 
 <main>
