--- a/online_shop_app/templates/products_detail.html
+++ b/online_shop_app/templates/products_detail.html
@@ -6,7 +6,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
                 <div class="card shadow-sm">
-                    <img class="card-img-top" src="{{ product.products | media_filter }}">
+                    <img class="card-img-top" src="{{ product.preview | media_filter }}">
                     <div class="card-body">
                         <p class="card-text">{{product.name}}</p>
                         <div class="d-flex justify-content-between align-items-center">
