--- a/online_shop_app/templates/products_list.html
+++ b/online_shop_app/templates/products_list.html
@@ -7,7 +7,7 @@
             {% for product in products %}
             <div class="col">
                 <div class="card shadow-sm">
-                    <img class="card-img-top" src="{{ product.products | media_filter }}">
+                    <img class="card-img-top" src="{{ product.preview | media_filter }}">
                     <div class="card-body">
                         <p class="card-text">{{ product.name }}</p>
                         <div class="d-flex justify-content-between align-items-center">
