--- a/online_shop_app/templates/online_shop_app/home.html
+++ b/online_shop_app/templates/online_shop_app/home.html
@@ -176,87 +176,82 @@
 
 
 <header data-bs-theme="dark">
-{% include 'includes/inc_menu.html' %}
+{% include 'online_shop_app/includes/inc_menu.html' %}
 </header>
 
-<div class="container">
-    <div class="row text-start mt-4 bt-4">
-        <div class="col-lg-9 col-md-6 col-sm-12">
-            <h1>Контактная информация</h1>
-            <div class="contacts-ico contacts-ico--phone">
-                <span itemprop="name">Бесплатный звонок по России: </span> <br>
-                <a href="tel:8777777777">8 (777) 777-77-77</a>
-                <span itemprop="telephone" style="display: none;">8 (777) 777-77-77</span>
-            </div>
-            <div class="contacts-ico contacts-ico--phone">
-                <span itemprop="name">Наш номер WatsApp: </span> <br>
-                <a href="tel:8777777777">8 (777) 777-77-77</a>
-                <span itemprop="telephone" style="display: none;">8 (777) 777-77-77</span>
-            </div>
+<main>
 
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Свяжитесь с нами</h4>
+    <section class="py-5 text-center container">
+        <div class="row py-lg-5">
+            <div class="col-5">
+                <h1 class="title mt-5 mb-5 pricing-title">Готовые проекты домов</h1>
+                <ul class="list-unstyled mb-5">
+                    <p class="h3">
+                        Босфор предлагает проекты домов и загородных коттеджей.
+                        В каталоге Вы найдете варианты из блоков и дерева
+                        площадью от 80 до 250 м2 с подробным описанием дома,
+                        планами этажей и фото
+                    </p>
+                </ul>
+                <div class="d-grid gap-2 col-12 mx-auto">
+                    <a class="btn btn-lg btn-dark" href="{% url 'online_shop_app:product_create' %}" role="button">Добавить проект</a>
                 </div>
-                <div class="card-body">
-                    <form method="post" action="" class="form-floating">
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            <label for="name">Имя</label>
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Ваше имя"
-                                   required>
+            </div>
+            <div class="col-7">
+                <div id="carouselExampleIndicators" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active"
+                                aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="https://sun9-26.userapi.com/impg/bYOF8-8y2sX7Wj4LCGygt4enowdlGsGRrh9SoA/kRLXMiWTMLQ.jpg?size=2560x1706&quality=95&sign=cdd7cec82320b17d0fa577b2c9b03648&type=album"
+                                 class="d-block w-100" alt="...">
                         </div>
-                        <div class="mb-3">
-                            <label for="phone">Телефон</label>
-                            <input type="text" name="phone" class="form-control" id="phone"
-                                   placeholder="Контактный телефон" required>
+                        <div class="carousel-item">
+                            <img src="https://sun13-2.userapi.com/impg/udstWw5l3q4grzc-ZUiJwGRKcGvYAmdbUuvY_g/0hSeQ90mrXw.jpg?size=2560x1706&quality=95&sign=47c338a426d8a3c6b607e70f8041daaa&type=album"
+                                 class="d-block w-100" alt="...">
                         </div>
-                        <div class="mb-3">
-                            <label for="message">Сообщение</label>
-                            <textarea type="text" name="message" class="form-control" id="message"
-                                      placeholder="Контактный телефон" required></textarea>
+                        <div class="carousel-item">
+                            <img src="https://sun9-55.userapi.com/impg/OPqmd-D-Up8FGU3AoNErDXQQMg63iQvzhN8fgg/4UFn4b5ys1M.jpg?size=2560x1706&quality=95&sign=a253e6ceea31c06b170929bd3f64db4e&type=album"
+                                 class="d-block w-100" alt="...">
                         </div>
-                        <button type="submit" class="btn btn-lg btn-block btn-dark">Отправить</button>
-                    </form>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
         </div>
+    </section>
+
+{% block content %}
+{% endblock %}
+</main>
+
+<footer class="text-body-secondary py-5">
+    <div class="container">
+        <p class="float-end mb-1">
+            <a href="#">Back to top</a>
+        </p>
+        <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
+        <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a
+                href="/docs/5.3/getting-started/introduction/">getting started guide</a>.</p>
     </div>
+</footer>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 
-    <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
-        <div class="container text-body-secondary">
-            <div class="row">
-                <div class="col-lg-3 mb-3">
-                    <a class="navbar-brand" href="/">
-                        <img src="https://sun9-56.userapi.com/impg/L-7l42bYhWWKUZ0xKIQ-ENOTSTx4hTsHnjdk6w/mKk64TOYyF4.jpg?size=1048x297&quality=95&sign=47dd03140665fe8802e0d4f9a8b23b2e&type=album"
-                             alt="Bootstrap" width="210" height="60">
-                    </a>
-                    <ul class="list-unstyled small mt-3">
-                        <li class="mb-2">
-                            Челябинск
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-6 col-lg-2 offset-lg-1 mb-3">
-                    <h5>Ссылки</h5>
-                    <ul class="list-unstyled">
-                        <li class="mb-2"><a href="/">Главная</a></li>
-                        <li class="mb-2"><a href="/catalog/">Каталог</a></li>
-                        <li class="mb-2"><a href="/">Заказать проект</a></li>
-                        <li class="mb-2"><a href="/">О нас</a></li>
-                        <li class="mb-2"><a href="/">Акции</a></li>
-                        <li class="mb-2"><a href="/contacts/">Контакты</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
 </body>
 </html>
