--- a/online_shop_app/templates/online_shop_app/includes/inc_menu.html
+++ b/online_shop_app/templates/online_shop_app/includes/inc_menu.html
@@ -9,7 +9,7 @@
             <div class="col-sm-4 offset-md-1 py-4">
                 <h4>Меню</h4>
                 <ul class="list-unstyled">
-                    <li><a href="{% url 'online_shop_app:home' %}" class="text-white">Главная</a></li>
+                    <li><a href="{% url 'online_shop_app:product_list' %}" class="text-white">Главная</a></li>
                     <li><a href="/catalog/" class="text-white">Каталог</a></li>
                     <li><a href="#" class="text-white">Услуги</a></li>
                     <li><a href="{% url 'online_shop_app:contacts' %}" class="text-white">Контакты</a></li>
@@ -20,7 +20,7 @@
 </div>
 <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'online_shop_app:home' %}">
+        <a class="navbar-brand" href="{% url 'online_shop_app:product_list' %}">
             <img src="https://sun9-56.userapi.com/impg/L-7l42bYhWWKUZ0xKIQ-ENOTSTx4hTsHnjdk6w/mKk64TOYyF4.jpg?size=1048x297&quality=95&sign=47dd03140665fe8802e0d4f9a8b23b2e&type=album"
                  alt="Bootstrap" width="210" height="60">
         </a>
