--- a/online_shop_app/templates/online_shop_app/product_detail.html
+++ b/online_shop_app/templates/online_shop_app/product_detail.html
@@ -1,24 +1,22 @@
-{% extends 'home.html' %}
+{% extends 'online_shop_app/home.html' %}
 {% load my_tags %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            {% for product in products %}
             <div class="col">
                 <div class="card shadow-sm">
                     <img class="card-img-top" src="{{ product.preview | media_filter }}">
                     <div class="card-body">
-                        <p class="card-text">{{ product.name }}</p>
+                        <p class="card-text">{{object.name}}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <p class="card-text">{{ product.description|truncatechars:100 }}</p>
+                                <p class="card-text">{{ product.description }}</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            {% endfor %}
         </div>
     </div>
 </div>
