--- a/online_shop_app/templates/online_shop_app/product_confirm_delete.html
+++ b/online_shop_app/templates/online_shop_app/product_confirm_delete.html
@@ -4,18 +4,16 @@
     <div class="row">
         <div class="col-6">
             <form class="row" method="post" enctype="multipart/form-data">
-                <div class="card">
+                <div class="card" style="width: 18rem;">
+                    <p class="card-text">Действительно хотите удалить? {{ object.name }}</p>
                     <div class="card-body">
                         {% csrf_token %}
-                        {{ form.as_p }}
                     </div>
-                    <button type="submit" class="btn btn-dark mb-2">
-                        {% if object %}
-                        Сохранить
-                        {% else %}
-                        Добавить
-                        {% endif %}
+                    <button type="submit" class="btn btn-danger mb-2">
+                        Удалить
                     </button>
+                    <a href="{% url 'online_shop_app:product_list'%}"
+                       class="btn btn-sm btn-dark mb-2">Отмена</a>
                 </div>
             </form>
         </div>
