--- a/blog/templates/blog/blogarticle_form.html
+++ b/blog/templates/blog/blogarticle_form.html
@@ -10,7 +10,13 @@
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Создать</button>
+            <button type="submit" class="btn btn-primary">
+                {% if object %}
+                Сохранить
+                {% else %}
+                Создать
+                {% endif %}
+            </button>
         </form>
     </div>
 </div>
