added current version

--- a/online_shop_app/templates/online_shop_app/product_list.html
+++ b/online_shop_app/templates/online_shop_app/product_list.html
@@ -10,6 +10,13 @@
                     <img class="card-img-top" src="{{ product.preview | media_filter }}">
                     <div class="card-body">
                         <p class="card-text">{{ product.name }}</p>
+                        <p class="card-text">
+                            {% if product.active_version != 'Нет активной версии' %}
+                            Активная версия: {{ product.active_version }} (v{{ product.number_version }})
+                            {% else %}
+                            Нет активной версии
+                            {% endif %}
+                        </p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <p class="card-text">{{ product.description|truncatechars:100 }}</p>
