--- a/online_shop_app/templates/online_shop_app/includes/inc_menu.html
+++ b/online_shop_app/templates/online_shop_app/includes/inc_menu.html
@@ -13,6 +13,11 @@
                     <li><a href="/catalog/" class="text-white">Каталог</a></li>
                     <li><a href="{% url 'blog:list' %}" class="text-white">Блог</a></li>
                     <li><a href="{% url 'online_shop_app:contacts' %}" class="text-white">Контакты</a></li>
+                    {% if user.is_authenticated %}
+                    <li><a href="{% url 'users:logout' %}" class="text-white">Выход</a></li>
+                    {% else %}
+                    <li><a href="{% url 'users:login' %}" class="text-white">Вход</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
