--- a/online_shop_app/templates/online_shop_app/product_list.html
+++ b/online_shop_app/templates/online_shop_app/product_list.html
@@ -24,15 +24,17 @@
                         </div>
                         <a href="{% url 'online_shop_app:product_detail' product.id %}"
                            class="btn btn-sm btn-dark mt-2">Подробнее</a>
-                        <a href="{% url 'online_shop_app:product_update' product.id %}"
-                           class="btn btn-sm btn-dark mt-2">Редактировать</a>
-                        <a href="{% url 'online_shop_app:product_delete' product.id %}"
-                           class="btn btn-sm btn-danger mt-2">Удалить</a>
-                        <a href="{% url 'online_shop_app:version_add' product.id %}"
-                           class="btn btn-sm btn-success mt-2">Добавить версию</a>
-                        {% if product.versions.count > 0 %}
-                        <a href="{% url 'online_shop_app:version_update' product.versions.last.id %}"
-                           class="btn btn-sm btn-primary mt-2">Редактировать последнюю версию</a>
+                        {% if user.is_authenticated %}
+                            <a href="{% url 'online_shop_app:product_update' product.id %}"
+                                class="btn btn-sm btn-dark mt-2">Редактировать</a>
+                            <a href="{% url 'online_shop_app:product_delete' product.id %}"
+                                class="btn btn-sm btn-danger mt-2">Удалить</a>
+                            <a href="{% url 'online_shop_app:version_add' product.id %}"
+                                class="btn btn-sm btn-success mt-2">Добавить версию</a>
+                            {% if product.versions.count > 0 %}
+                            <a href="{% url 'online_shop_app:version_update' product.versions.last.id %}"
+                                class="btn btn-sm btn-primary mt-2">Редактировать последнюю версию</a>
+                            {% endif %}
                         {% endif %}
                     </div>
                 </div>
