--- a/online_shop_app/templates/online_shop_app/includes/inc_menu.html
+++ b/online_shop_app/templates/online_shop_app/includes/inc_menu.html
@@ -11,6 +11,7 @@
                 <ul class="list-unstyled">
                     <li><a href="{% url 'online_shop_app:product_list' %}" class="text-white">Главная</a></li>
                     <li><a href="/catalog/" class="text-white">Каталог</a></li>
+                    <li><a href="{% url 'online_shop_app:categories_list' %}" class="text-white">Категории</a></li>
                     <li><a href="{% url 'blog:list' %}" class="text-white">Блог</a></li>
                     <li><a href="{% url 'online_shop_app:contacts' %}" class="text-white">Контакты</a></li>
                     {% if user.is_authenticated %}
